# India-event-management-system-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: EventManagement.cpp
src/enums/: Budget.h  City.h  EventService.h  OccasionType.h
src/service/: PurpleFox.cpp  PurpleFox.h  UserRegistration.cpp  UserRegistration.h
test/service/: PurpleFoxTest.cpp  UserRegistrationTest.cpp
